Fix broken google services relying on window.gapi; persist token in local storage for "auto-login"

--- a/src/components/auth/login.less
+++ b/src/components/auth/login.less
@@ -1,5 +1,5 @@
 #login-panel {
-    width: 400px;
+    width: 100%;
     margin: 0 auto;
     text-align: center;
 }
@@ -11,6 +11,8 @@ button.sign-in-btn {
     margin: 20px;
     width: 250px;
     height: 70px;
+
+    svg { width: 100%; height: 100%; }
 
     use {
         &.normal { display: block; }
